build_k8s_cluster/deploy_yaml_files/lnmp-po.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lnmp 
spec:
  containers:
  - name: lnmp 
    image: po_lnmp:latest
    ports:
    - containerPort: 22
