build_k8s_cluster/deploy_yaml_files/nginx-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test-nginx
spec:
  replicas: 2
  template:
    metadata:
      labels:
        run: test-nginx
    spec:
      containers:
      - name: test-nginx
        image: nginx:latest
        ports:
        - containerPort: 80
