build_k8s_cluster/deploy_yaml_files/redis-deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis
        volumeMounts:
        - name: vmfs-vmdk-storage
          mountPath: /data/
      volumes:
      - name: vmfs-vmdk-storage
        vsphereVolume:
          volumePath: "[Datastore] volumes/testdir"
          fsType: ext4
