build_k8s_cluster/deploy_yaml_files/consul-all.yaml
apiVersion: extensions/v1beta1 
kind: Deployment
metadata:
  name: my-consul
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: my-consul-xx
        run: my-consul
    spec:
      containers:
      - name: consul 
        image: progrium/consul:latest
        #volumeMounts:
        #  - name: jenkins-home-storage
        #    mountPath: /var/jenkins_home
        ports:
        - containerPort: 8300
        - containerPort: 8400 
        - containerPort: 8500 
        - containerPort: 8600 
        #volumes:
        #- name: jenkins-home-storage
        #  hostPath: 
        #   path: "/opt/gitcode/my_jenkins_home" 
        #nodeName: 10.86.20.60 
        command: [
          "/bin/start",   
          " -server",
          "-bootstrap",
          "-rejoin"   
        ]
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: my-consul-xx 
  name: my-consul 
spec:
  ports:
    - port: 8300
      targetPort: 8700 
      nodePort: 8700 
      name: a 
    - port: 8400 
      targetPort: 8400 
      nodePort: 8400 
      name: b 
    - port: 8500 
      targetPort: 8500 
      nodePort: 8500 
      name: c 
    - port: 8600 
      targetPort: 8600 
      nodePort: 8600 
      name: d 
  selector:
    run: my-consul 
  type: NodePort
