build_k8s_cluster/deploy_yaml_files/greeter-micro-api.yaml
apiVersion: extensions/v1beta1 
kind: Deployment
metadata:
  name: micro-greeter-micro-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: micro-greeter-micro-api-xx
        run: micro-greeter-micro-api
    spec:
      containers:
      - name: micro-api 
        image: microhq/micro:latest
        ports:
        - containerPort: 8080
        command: [
          "/micro",
          "--registry_address=10.86.20.63:8500",
          #"--api_handler=rpc", 
          "api"
        ]
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: micro-greeter-micro-api-xx 
  name: micro-greeter-micro-api 
spec:
  ports:
    - port: 8080
      targetPort: 8080 
      nodePort: 8980 
      name: a 
  selector:
    run: micro-greeter-micro-api 
  type: NodePort
