build_k8s_cluster/deploy_yaml_files/jenkins-deploy.yaml
apiVersion: extensions/v1beta1 
kind: Deployment
metadata:
  name: my-jenkins 
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: my-jenkins-xx
        run: my-jenkins 
    spec:
      containers:
      - name: jenkins 
        image: hub.c.163.com/r00txx/jenkins:py_testCoverage 
        volumeMounts:
          - name: jenkins-home-storage
            mountPath: /var/jenkins_home
        ports:
        - containerPort: 8080
        - containerPort: 50000 
      volumes:
        - name: jenkins-home-storage
          hostPath: 
           path: "/opt/gitcode/my_jenkins_home" 
      nodeName: 10.86.20.60
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: my-jenkins-xx 
  name: my-jenkins 
spec:
  ports:
    # The port that this service should serve on.
    - port: 8080
      targetPort: 8080 
      name: web
    - port: 50000 
      targetPort: 50000
      name: manage
  # Label keys and values that must match in order to receive traffic for this service.
  selector:
    run: my-jenkins 
  type: NodePort
