build_k8s_cluster/deploy_yaml_files/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: my-jenkins 
    name: my-jenkins 
  name: my-jenkins 
spec:
  ports:
    # The port that this service should serve on.
    - port: 8080
      targetPort: 8080 
      name: web
    - port: 50000 
      targetPort: 50000
      name: manage
  # Label keys and values that must match in order to receive traffic for this service.
  selector:
    run: my-jenkins 
    name: my-jenkins 
  type: NodePort
