build_k8s_cluster/deploy_yaml_files/micro-all.yaml
apiVersion: extensions/v1beta1 
kind: Deployment
metadata:
  name: my-micro
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: my-micro-xx
        run: my-micro
    spec:
      containers:
      - name: micro 
        image: microhq/micro:latest
        #volumeMounts:
        #  - name: jenkins-home-storage
        #    mountPath: /var/jenkins_home
        ports:
        - containerPort: 8080
        #volumes:
        #- name: jenkins-home-storage
        #  hostPath: 
        #   path: "/opt/gitcode/my_jenkins_home" 
      #nodeName: 10.86.20.60
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: my-micro-xx 
  name: my-micro 
spec:
  ports:
    - port: 8080
      targetPort: 8090 
      nodePort: 8090 
      name: a 
  selector:
    run: my-micro 
  type: NodePort
