build_k8s_cluster/deploy_yaml_files/greeter-micro-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: greeter-ingress
spec:
  backend:
    serviceName: micro-greeter-micro-api 
    servicePort: 8980
